fixed bug on checkbox hover by removing the hover state on mobile device

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,7 +64,7 @@ a {
 }
 
 .checkbox-control label {
-  @apply flex items-center justify-center h-full text-sm py-2 px-5 rounded-md cursor-pointer hover:bg-orange-sol transition duration-300;
+  @apply flex items-center justify-center h-full text-sm py-2 px-5 rounded-md cursor-pointer md:hover:bg-orange-sol transition duration-300;
 }
 
 .button-prime {
